@@ -19,14 +19,14 @@
 **/
 ?>
 <?php
-	require_once 'include/config.inc.php';
-	require_once 'include/triggers.inc.php';
+require_once('include/config.inc.php');
+require_once('include/triggers.inc.php');
 
-	$page['file']	= 'chart4.php';
-	$page['title']	= "S_CHART";
-	$page['type']	= PAGE_TYPE_IMAGE;
+$page['file']	= 'chart4.php';
+$page['title']	= "S_CHART";
+$page['type']	= PAGE_TYPE_IMAGE;
 
-include_once 'include/page_header.php';
+include_once('include/page_header.php');
 
 ?>
 <?php
