@@ -19,14 +19,14 @@
 **/
 ?>
 <?php
-require_once 'include/config.inc.php';
-require_once 'include/graphs.inc.php';
+require_once('include/config.inc.php');
+require_once('include/graphs.inc.php');
 
 $page['file']	= 'chart7.php';
 $page['title']	= "S_CHART";
 $page['type']	= PAGE_TYPE_IMAGE;
 
-include_once 'include/page_header.php';
+include_once('include/page_header.php');
 
 ?>
 <?php
@@ -99,6 +99,6 @@ include_once 'include/page_header.php';
 ?>
 <?php
 
-include_once 'include/page_footer.php';
+include_once('include/page_footer.php');
 
 ?>
